Markup: fix z-index sort dropdown

--- a/markup/css/components/_dropdown.scss
+++ b/markup/css/components/_dropdown.scss
@@ -3,7 +3,6 @@
 // -------------------------
 .dropdown {
   position: relative;
-  z-index: 1;
 }
 
 .dropdown__button {
@@ -58,8 +57,8 @@
 }
 
 .dropdown__list-item {
-  margin-bottom: spaceVer(0.25);
-  margin-top: spaceVer(0.25);
+  margin-bottom: spaceVer(0.5);
+  margin-top: spaceVer(0.5);
   color: $grey;
   transition: $easeOutQuart;
   cursor: pointer;
